--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ form {padding-top:18px;margin:0;float:left;}
 <a href="Icon/abk.svg" download><img src="Icon/abk.svg" alt=""/></a>
 <a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
 <a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt=""/></a>
-<a href="Icon/aay.svg" download><img src="Icon/aay.svg" alt=""/></a>
+<a href="Icon/ack.svg" download><img src="Icon/ack.svg" alt=""/></a>
 <a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
 <a href="Icon/abu.svg" download><img src="Icon/abu.svg" alt=""/></a>
 <a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
@@ -36,16 +36,17 @@ form {padding-top:18px;margin:0;float:left;}
 <a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt=""/></a>
 <a href="Icon/abe.svg" download><img src="Icon/abe.svg" alt=""/></a>
 <a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt=""/></a>
-<a href="Icon/aan.svg" download><img src="Icon/aan.svg" alt=""/></a>
+<a href="Icon/acd.svg" download><img src="Icon/acd.svg" alt=""/></a>
 <a href="Icon/aam.svg" download><img src="Icon/aam.svg" alt=""/></a>
 <a href="Icon/aal.svg" download><img src="Icon/aal.svg" alt=""/></a>
 <a href="Icon/aak.svg" download><img src="Icon/aak.svg" alt=""/></a>
 <a href="Icon/abc.svg" download><img src="Icon/abc.svg" alt=""/></a>
 <a href="Icon/acg.svg" download><img src="Icon/acg.svg" alt=""/></a>
-<a href="Icon/aag.svg" download><img src="Icon/aag.svg" alt=""/></a>
+<a href="Icon/acr.svg" download><img src="Icon/acr.svg" alt=""/></a>
 <a href="Icon/aaf.svg" download><img src="Icon/aaf.svg" alt=""/></a>
 <a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt=""/></a>
-<a href="Icon/abb.svg" download><img src="Icon/abb.svg" alt=""/></a>
+<a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
+<a href="Icon/acc.svg" download><img src="Icon/acc.svg" alt=""/></a>
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <h2>- About -</h2>
