--- a/p_one.html
+++ b/p_one.html
@@ -42,8 +42,8 @@ a {text-decoration:none;}
 <a href="Icon/abr.svg" download><img src="Icon/abr.svg" alt=""/></a>
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
 <a href="Icon/aad.svg" download><img src="Icon/aad.svg" alt=""/></a>
-<a href="Icon/acc.svg" download><img src="Icon/acc.svg" alt=""/></a>
-<a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
+<a href="Icon/aag.svg" download><img src="Icon/aag.svg" alt=""/></a>
+<a href="Icon/aay.svg" download><img src="Icon/aay.svg" alt=""/></a>
 <a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
 <a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt=""/></a>
 <a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt=""/></a>
