--- a/p_one.html
+++ b/p_one.html
@@ -61,6 +61,8 @@ a {text-decoration:none;}
 <a href="Icon/acf.svg" download><img src="Icon/acf.svg" alt=""/></a>
 <a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt=""/></a>
 <a href="Icon/aby.svg" download><img src="Icon/aby.svg" alt=""/></a>
+<a href="Icon/aan.svg" download><img src="Icon/aan.svg" alt=""/></a>
+<a href="Icon/abb.svg" download><img src="Icon/abb.svg" alt=""/></a>
 <a href="Icon/aci.svg" download><img src="Icon/aci.svg" alt=""/></a>
 <a href="Icon/acj.svg" download><img src="Icon/acj.svg" alt=""/></a>
 <a href="Icon/acl.svg" download><img src="Icon/acl.svg" alt=""/></a>
