--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code
 img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:18px;margin:0;padding-left:20%;}
+form {padding-top:18px;padding-bottom:15px;padding-left:15%;margin:0;}
 </style>
 </head>
 <body>
@@ -61,7 +61,7 @@ form {padding-top:18px;margin:0;padding-left:20%;}
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-<h2>-How To Download and Use-</h2>
+<h2>- How To Download and Use -</h2>
 <p></p>
 
 </body>
