--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code
 img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:18px;padding-bottom:15px;padding-left:15%;margin:0;}
+form {padding-top:18px;padding-bottom:15px;padding-left:10%;margin:0;}
 </style>
 </head>
 <body>
@@ -62,7 +62,7 @@ form {padding-top:18px;padding-bottom:15px;padding-left:15%;margin:0;}
 <img border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 <h2>- How To Download and Use -</h2>
-<p></p>
+<p>First find an image that you whould like to use.</p>
 
 </body>
 </html>
