--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ form {padding-top:18px;padding-bottom:15px;padding-left:10%;margin:0;}
 <img border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 <h2>- How To Download and Use -</h2>
-<p>First find an image that you whould like to use.</p>
+<p>First find an image that you whould like to use. On most devices you can simply click and the image will download on its own. However if this does not work for you simply right click the image and click save as. In case this does not work, try to open the file on a new window and view the source code. Then just copy and paste the text onto a text editor. Remember that svg is a software and you can change this software anytime you like.</p>
 
 </body>
 </html>
