--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code
 img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:18px;padding-bottom:15px;padding-left:9%;margin:0;}
+form {padding-top:18px;padding-bottom:15px;padding-left:8%;margin:0;}
 </style>
 </head>
 <body>
@@ -62,7 +62,7 @@ form {padding-top:18px;padding-bottom:15px;padding-left:9%;margin:0;}
 <img border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 <h2>- How To Download and Use -</h2>
-<p>First find an image that you whould like to use. On most devices you can simply click and the image will download on its own. However if this does not work for you simply right click the image and click save as. In case this does not work, try to open the file on a new window and view the source code. Then just copy and paste the text onto a text editor. Remember that svg is a software and you can change this software anytime you like.</p>
-<p>You may also like to change or edit the color of your svg. One way to do this is to open your svg file with a text editor.</p>
+<p>First find an image that you whould like to use. On most devices you can simply click and the image will download on its own. However if this does not work for you simply right click the image and click save as. In case this does not work, try to open the file on a new window and view the source code. Then just copy and paste the text onto a text editor. Remember that svg is a software and you can change this software anytime you like.</p><br/>
+<p>You may also like to change or edit the color of your svg. One way to do this is to open your svg file with a text editor. Next find the part you whould like to change.</p>
 </body>
 </html>
